--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,8 @@
 
 /* Colletor CSS */
 
+@import url('Component/Collector/Collector_Complains.css');
+
 /* Colletor Main left hand side CSS This is used in left hand side of all the Colletor uis*/
 @import url('Component/Collector/Collector_Main.css');
 
