--- a/public/css/Component/Admin/Admin_Center_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Add.css
@@ -22,6 +22,8 @@
         justify-content: center;
         flex-direction: row;
         margin-left: 32px;
+        width: 80%;
+
     }
 
     .main-bottom-down-top-content img {
@@ -37,9 +39,75 @@
     }
 
     .main-bottom-down-down {
-        border: 1px solid black;
-        margin: 25px 90px;
-        border-radius: 15px;
+        border: 1px solid #ddd;
+        margin: 30px auto;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: #f9f9f9;
+        width: 40%;
+    }
+
+    .main-bottom-down-down h1 {
+        margin-top: 10px;
+        color: #333;
+    }
+
+    .main-bottom-down-down-line {
+        background: #1B6652;
+        width: 80px;
+        height: 7px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+
+    .main-bottom-down-down-content {
+        display: grid;
+        grid-template-columns: 30% 70%;
+        margin-bottom: 20px;
+        width: 100%;
+
+    }
+
+    .main-bottom-down-down-content input {
+        height: 40px;
+        width: 100%;
+        border-radius: 5px;
+        border: 1px solid #ddd;
+        font-size: 16px;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+
+    .main-bottom-down-down-content p {
+        font-size: 18px;
+        margin-bottom: 7px;
+        color: #555;
+        font-weight: 600;
+    }
+
+    .Create_Center_Button {
+        width: 50%;
+        height: 45px;
+        background: #1B6652;
+        font-size: 18px;
+        color: white;
+        border: none;
+        font-weight: 600;
+        margin-top: 30px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+
+    }
+
+    .Create_Center_Button:hover {
+        background: #155843;
+        /* Darker color on hover */
     }
 
 }
