--- a/public/css/Component/Admin/Admin_Center_Top.css
+++ b/public/css/Component/Admin/Admin_Center_Top.css
@@ -28,12 +28,12 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-top img {
-        width: 35px;
-        height: 35px;
+        width: 32px;
+        height: 32px;
         margin-left: 30px;
     }
 
@@ -51,20 +51,23 @@
     }
 
     .main-top-component img {
-        width: 50px;
-        height: 50px;
-        margin-left: 10px;
+        width: 40px;
+        height: 40px;
+
+        margin-left: 15px;
     }
 
     .main-top-component p {
-        font-size: 22px;
+
+        font-size: 18px;
         font-family: inter;
         letter-spacing: 0.1px;
+
     }
 
     .main-bottom {
         display: grid;
-        grid-template-rows: 16% 84%;
+        grid-template-rows: 20% 80%;
 
     }
 
@@ -76,6 +79,8 @@
         display: flex;
         align-items: center;
         padding-left: 33px;
+        padding-top: 5px;
+
     }
 
     .main-right-top-two h1 {
