--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,8 @@
 @import url('Component/Collector/Collector_assistants-main.css');
 @import url('Component/Collector/Collector_assistants-add.css');
 
+@import url('Component/Collector/Collector_Complains.css');
+
 /* Center Manager CSS */
 
 /* Center Manager Main left hand side CSS This is used in left hand side of all the Center Manager uis*/
