--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,6 +82,7 @@
 @import url('Component/Admin/Admin_Center_View.css');
 @import url('Component/Admin/Admin_Center_Top.css');
 @import url('Component/Admin/Admin_Center_Add.css');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
 
 a {
     text-decoration: none;
@@ -91,6 +92,7 @@ a {
 }
 
 * {
+    font-family: inter;
     margin: 0;
     padding: 0;
 }
