--- a/public/css/Component/Admin/Admin_Collectors_Complains.css
+++ b/public/css/Component/Admin/Admin_Collectors_Complains.css
@@ -1,4 +1,8 @@
-.Admin_Customer_Complains {
+.Admin_Collectors_Complains {
+
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
+
     * {
         margin: 0;
         padding: 0;
@@ -34,7 +38,7 @@
         text-align: center;
         height: 55px;
         display: grid;
-        grid-template-columns: 10% 10% 8% 10% 14% 12% 25% 10%;
+        grid-template-columns: 9% 10% 11% 10% 14% 12% 15% 9% 9%;
     }
 
     .table-header th {
@@ -49,7 +53,7 @@
         text-align: center;
         height: 52px;
         display: grid;
-        grid-template-columns: 10% 10% 8% 10% 14% 12% 25% 10%;
+        grid-template-columns: 9% 10% 11% 10% 14% 12% 15% 9% 9%;
         border-bottom: 2px solid #CACACA;
 
 
@@ -71,78 +75,8 @@
         cursor: pointer;
     }
 
-    .confirm-cancel {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    .confim-cancell-content {
-        background-color: #ecf0f1;
-        width: 40%;
-        height: 40%;
-        border-radius: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    .confim-cancell-content h1 {
-        margin-bottom: 20px;
-    }
-
-    .confim-cancell-content-box {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-    }
-
-    .confim-cancell-content-box button {
-        width: 120px;
-        height: 35px;
-        font-size: 18px;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: none;
-        margin: 10px;
-        background-color: #74b9ff;
-        cursor: pointer;
-    }
 
 
-
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
-
-    a {
-        text-decoration: none;
-        color: inherit;
-        width: none;
-        height: none;
-    }
-
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: 'Inter';
-    }
-
-    a {
-        text-decoration: none;
-        color: inherit;
-    }
 
     .main-right {
         display: grid;
@@ -352,6 +286,7 @@
 
     }
 
+
     @media screen and (max-width: 1118px) {
         .main-right-top-one-content {
             width: 250px;
@@ -439,8 +374,6 @@
 
     }
 
-
-
     @media screen and (max-width: 1250px) {
         .main-left-middle-content h2 {
             display: none;
@@ -472,7 +405,6 @@
             height: 100%;
         }
     }
-
 
 
 }
