--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -1,6 +1,4 @@
 .CenterManager_Collector {
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
-
     * {
         margin: 0px;
         padding: 0px;
@@ -25,11 +23,12 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-top img {
-        width: 35px;
-        height: 35px;
+        width: 32px;
+        height: 32px;
         margin-left: 30px;
     }
 
@@ -46,19 +45,20 @@
     }
 
     .main-top-component img {
-        width: 50px;
-        height: 50px;
-        margin-left: 10px;
+        width: 40px;
+        height: 40px;
+        margin-left: 15px;
     }
 
     .main-top-component p {
         font-size: 18px;
         font-family: inter;
+        letter-spacing: 0.1px;
     }
 
     .main-bottom {
         display: grid;
-        grid-template-rows: 16% 84%;
+        grid-template-rows: 18% 82%;
     }
 
     .main-right-top-two {
@@ -66,6 +66,7 @@
         display: flex;
         align-items: center;
         padding-left: 33px;
+        padding-top: 5px;
     }
 
     .main-right-top-two h1 {
@@ -298,7 +299,7 @@
 
     }
 
-    .delete_confirm{
+    .delete_confirm {
         position: fixed;
         top: 0;
         left: 0;
