--- a/public/css/Component/CenterManager/CenterManager_Collector_Add.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector_Add.css
@@ -25,11 +25,12 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-top img {
-        width: 35px;
-        height: 35px;
+        width: 32px;
+        height: 32px;
         margin-left: 30px;
     }
 
@@ -46,19 +47,20 @@
     }
 
     .main-top-component img {
-        width: 50px;
-        height: 50px;
-        margin-left: 10px;
+        width: 40px;
+        height: 40px;
+        margin-left: 15px;
     }
 
     .main-top-component p {
         font-size: 18px;
         font-family: inter;
+        letter-spacing: 0.1px;
     }
 
     .main-bottom {
         display: grid;
-        grid-template-rows: 16% 84%;
+        grid-template-rows: 18% 82%;
     }
 
     .main-right-top-two {
@@ -66,6 +68,7 @@
         display: flex;
         align-items: center;
         padding-left: 33px;
+        padding-top: 5px;
     }
 
     .main-right-top-two h1 {
@@ -218,7 +221,7 @@
         margin: 10px;
     }
 
-    .collector_success{
+    .collector_success {
         position: fixed;
         top: 0;
         left: 0;
