--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,8 @@
 
 @import url('Component/CenterManager/CenterManager_Collector.css');
 @import url('Component/CenterManager/CenterManager_Collector_Add.css');
+@import url('Component/CenterManager/CenterManager_Collector_Complains.css');
+
 @import url('Component/CenterManager/CenterManager_CenterWorker.css');
 @import url('Component/CenterManager/CenterManager_CenterWorker_Add.css');
 
@@ -71,10 +73,14 @@
 
 
 @import url('Component/Admin/Admin_Customer_Complains.css');
+@import url('Component/Admin/Admin_Collectors_Complains.css');
 
 @import url('Component/Admin/Admin_Center_Manager_Add.css');
 @import url('Component/Admin/Admin_Center_Manager.css');
 @import url('Component/Admin/Admin_Center_Manager_View.css');
+
+@import url('Component/Admin/Admin_Collector.css');
+
 
 
 @import url('Component/Admin/Admin_Customer.css');
