--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -4,7 +4,6 @@
         height: 100%;
         overflow: scroll;
         padding-left: 1%;
-
     }
 
     .logout_anchor {
@@ -17,10 +16,11 @@
         border-collapse: collapse;
         text-align: center;
         padding-left: 1%;
+
     }
 
     .table-header {
-        background-color: black;
+        background-color: #B9FFB7;
         font-size: 17px;
         font-family: Montserrat;
         text-align: center;
@@ -43,8 +43,6 @@
         display: grid;
         grid-template-columns: 15% 15% 20% 15% 15% 10% 10%;
         border-bottom: 2px solid #CACACA;
-
-
     }
 
     .table td {
@@ -303,7 +301,6 @@
     .main-right-top {
         display: flex;
         flex-direction: column;
-
     }
 
     .A {
@@ -313,10 +310,11 @@
     .main-right-top-one {
         display: flex;
         flex-direction: row;
+        justify-content: flex-end;
         align-items: center;
-        height: 50px;
-        margin-top: 20px;
 
+        height: 65px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-right-top-one img {
@@ -339,8 +337,8 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding-left: 19%;
-        margin-left: 37%;
+        justify-content: flex-end;
+        padding-right: 3%;
     }
 
     .main-right-top-one-content p {
