--- a/public/css/Component/Admin/Admin_Center_View.css
+++ b/public/css/Component/Admin/Admin_Center_View.css
@@ -167,4 +167,67 @@
 
 
     }
+
+    .center_delete {
+        background-color: rgba(0, 0, 0, 0.5);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+    }
+
+    .popup {
+        text-align: center;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        max-width: 300px;
+    }
+
+    .popup img {
+        max-width: 50%;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .popup p {
+        margin-top: 10px;
+
+    }
+
+    .btns {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+        width: 100%;
+    }
+
+    .btns a {
+        text-decoration: none;
+    }
+
+    .btns button {
+        padding: 10px 20px;
+        margin: 0 10px;
+        cursor: pointer;
+        background-color: #e74c3c;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .btns button:hover {
+        background-color: #c0392b;
+    }
+
+    .cancelbtn {
+        background-color: #b2bec3 !important;
+    }
 }
