--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -1,5 +1,6 @@
 .Collector_assistants-main {
 
+
     .main-right a {
         text-decoration: none;
         margin-right: 5%
@@ -10,11 +11,15 @@
         width: 100%;
         height: 100%;
         grid-template-rows: 26% 74%;
+
     }
+
+    .main-right-bottom {}
 
     .main-right-top {
         display: flex;
         flex-direction: column;
+
     }
 
     .A {
@@ -28,6 +33,7 @@
         align-items: center;
         height: 65px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        /* background-color: #f0f2f5;*/
     }
 
     .main-right-top-one img {
@@ -212,11 +218,13 @@
         height: 500px;
         overflow: scroll;
         padding-left: 1%;
+
     }
 
     .main-right-bottom-top {
         padding-left: 1%;
         width: 99%;
+
     }
 
     .logout_anchor {
@@ -229,7 +237,7 @@
         border-collapse: collapse;
         text-align: center;
         padding-left: 1%;
-
+        background-color: #f0f2f5;
     }
 
     .table-header {
@@ -267,6 +275,7 @@
         align-items: center;
         justify-content: center;
         overflow-y: scroll;
+        background-color: #f0f2f5;
     }
 
     td img {
