--- a/public/css/Component/Admin/Admin_Center_Top.css
+++ b/public/css/Component/Admin/Admin_Center_Top.css
@@ -63,11 +63,16 @@
 
     .main-bottom {
         display: grid;
-        grid-template-rows: 20% 80%;
+        grid-template-rows: 17% 83%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 
     }
 
-    .main-bottom-top {}
+    .main-bottom-top {
+        border-bottom: 1px solid #e1e1e1;
+        border-radius: 10px;
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+    }
 
 
     .main-right-top-two {
@@ -88,6 +93,7 @@
         flex-direction: row;
         padding-left: 38px;
         padding-top: 7px;
+
     }
 
     .main-right-top-three-content {
@@ -102,8 +108,8 @@
     .main-right-top-three-content p {
         font-size: 17px;
         padding-bottom: 5px;
-    }
 
+    }
 
     .line {
         width: 93px;
