collector_ass_update

--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -306,9 +306,7 @@
 
     }
 
-    .A {
-        background-color: #FFCA3A !important;
-    }
+
 
     .main-right-top-one {
         display: flex;
@@ -427,6 +425,7 @@
         height: 100%;
     }
 
+
     .popup {
         width: 400px;
         background: white;
@@ -495,6 +494,222 @@
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     }
+
+    .update_click{
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .popup-form{
+        width:50%;
+        background: white;
+        border-radius: 6px;
+        top: 0;
+        position: relative;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .popup-form h2{
+        font-size: 23px;
+        font-weight: 600;
+        margin: 10px 0 10px;
+        margin-top: 25px;
+    }
+    
+    .update-popup-img{
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 10px; 
+        right: 10px;
+    
+    }
+    
+    .btns1{
+        margin-top: 5px;
+        margin-bottom: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        
+        
+    }
+    
+    .updatebtn{
+        width: 42%; 
+        margin-left: 5px;
+        padding: 10px 0;
+        background: rgb(44, 196, 42);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    
+    }
+
+    .cancelbtn1{
+        width: 319px;
+        margin-left: 10px;
+        padding: 10px 0;
+        background: #bab3b3;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    
+    }
+
+    .updateData {
+        width: 100%;
+        margin-bottom: 15px;
+        margin-left: 65px;
+        border-radius: 4px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+       
+    }
+    
+    .A{
+        margin-top: 17px;
+    }
+    
+    .B{
+        margin-bottom: 17px;
+    }
+    
+    .line{
+        width: 93px;
+        height: 3px;
+        background-color: #1B6652;
+        
+    }
+    
+    .updateData input{
+        width: 80%;   
+        padding: 6px 12px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;  
+        background-color: #fff;
+        border: 1px solid #ced4da;
+        border-radius: 4px;
+        
+    
+    }
+    
+    .updateData label{
+    
+         margin-bottom: 7px; 
+    }
+    
+    .updatePopupform{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        border-radius: 4px;
+        height: 100%;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    
+    @media screen and(max-width: 946px){
+    
+        .updateData {
+            margin-left:10px;
+    
+        }
+
+        .cancelbtn1{
+            width: 100px;
+        }
+
+        .updatebtn{
+            width: 100px;
+        }
+    
+    }
+
+    /*Update success*/
+    .collector_ass_update_success{
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+
+    }
+
+    .popup1 {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup1 {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup1 img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup1 h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup1 button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #6fd649;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+
+    }
+
+
 
     @media screen and (max-width:862px) {
         .main-right-top-one-content {
@@ -613,7 +828,6 @@
             width: 140%;
         }
 
+        }
 
-
-    }
 }
