--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -511,6 +511,14 @@
         height: 100%;
 
     }
+    .form{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        border-radius: 4px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+    }
 
     .popup-form {
         width: 50%;
