--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -530,7 +530,7 @@
     
     .personal-details{
         font-size: 18px;
-        font-weight: 500;
+        font-weight: 550;
         position: relative;
         margin-inline-end: auto;
         margin-top: 10px;
@@ -540,7 +540,7 @@
     
     .vehicle-details{
         font-size: 18px;
-        font-weight: 500;
+        font-weight: 550;
         position: relative;
         margin-inline-end: auto;
         margin-left: 25px;
@@ -558,8 +558,7 @@
     
     
     }
-    
-    
+     
     @media screen and(max-width: 957px){
     
         .updateData {
@@ -575,6 +574,68 @@
         }
     
     }
+
+    /*Update success*/
+    .success_popup_box {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+
+    }
+
+    .popup1 {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup1 {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup1 img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup1 h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup1 button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #6fd649;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+
+    }
+
 
 
 }
