--- a/public/css/Component/Admin/Admin_Center_Manager.css
+++ b/public/css/Component/Admin/Admin_Center_Manager.css
@@ -65,7 +65,9 @@
 
     }
 
-    .main-bottom-top {}
+    .main-bottom-top {
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
 
     .main-right-top-two {
