--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -1,5 +1,6 @@
 .Customer_Complains {
     @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap");
 
     * {
         margin: 0;
@@ -20,12 +21,14 @@
         justify-content: space-between;
         align-items: center;
         font-family: Inter;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
     }
 
     .main-top img {
+        width: 32px;
+        height: 32px;
         margin-left: 30px;
-        width: 35px;
-        height: 35px;
     }
 
     .main-top-component {
@@ -37,14 +40,15 @@
     }
 
     .main-top-component img {
-        width: 50px;
-        height: 50px;
-        margin-left: 10px;
+        width: 40px;
+        height: 40px;
+        margin-left: 15px;
     }
 
     .main-top-component p {
-        font-family: Inter;
-        font-size: 17px;
+        font-size: 18px;
+        font-family: inter;
+        letter-spacing: 0.1px;
     }
 
     .back_button {
@@ -52,95 +56,187 @@
     }
 
     .main-bottom {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-bottom-component {
+        width: 65%;
+        height: 75%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        padding: 25px;
         display: grid;
         grid-template-columns: 50% 50%;
     }
 
-    .main-bottom-left {
+
+    .main-bottom-component-right {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 70px;
     }
 
-    .main-bottom-right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-right: 70px;
+    .main-bottom-component-right img {
+        width: 100%;
+        height: 100%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+
     }
 
-    .main-bottom-left-component {
-        width: 70%;
-        height: 95%;
-        background: #dfffd3;
-        border-radius: 20px;
-        box-shadow: 5px 3px 3px rgba(0, 0, 0, 0.2);
+    .main-bottom-component-left {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        color: #393939;
-        margin-left: 70px;
-        margin-top: -10px;
-        margin-bottom: 10px;
     }
 
-    .main-bottom-left-component h2 {
-        font-size: 25px;
-        color: #2b2b2b;
-        margin-top: 30px;
-        margin-bottom: 10px;
+    .main-bottom-component-left-topic {
+        margin-bottom: 35px;
     }
 
     .line {
-        width: 80px;
-        height: 7px;
-        background-color: #1b6652;
-        margin-bottom: 20px;
+        height: 4px;
+        width: 60px;
+        background: #1B6652;
+        margin-top: 3px;
     }
 
-    .main-bottom-left-component-input {
+    .main-bottom-component-left-topic h2 {
+        font-size: 28px;
+        font-weight: 500;
+    }
+
+    .main-bottom-component-left-component {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-bottom-component-left-component {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+    }
+
+    .main-bottom-component-left-component h4 {
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 17px;
+        margin-bottom: 7px;
+    }
+
+    .main-bottom-component-left-component input {
+        height: 35px;
+        width: 85%;
+        outline: none;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 15px;
+        font-size: 16px;
+        border-bottom-width: 2px;
+        transition: all 0.3s ease;
+        margin-bottom: 6px;
+    }
+
+    .main-bottom-component-left-component input:focus {
+        border-color: #4dccaa;
+    }
+
+    .complain {
+        height: 66px !important;
+    }
+
+    .err {
+        height: 10px;
+        font-size: 15px;
+        font-weight: 500;
+        margin-bottom: 5px;
+        color: #e74c3c;
+    }
+
+    .main-bottom-component-left-button {
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
-        width: 80%;
-        margin-bottom: 15px;
+        margin-top: 5px;
     }
 
-    .main-bottom-left-component-input p {
-        font-size: 17px;
-        font-family: Inter;
-        margin-bottom: 10px;
-        margin-right: auto;
-        margin-left: 28px;
-    }
-
-    .main-bottom-left-component-input input {
-        height: 40px;
-        width: 85%;
-        background: #f4f4f4;
-        border: 1px solid #1b6652;
-        border-radius: 5px;
-    }
-
-    .main-bottom-left-component button {
-        width: 180px;
-        height: 70px;
-        background: #1b6652;
-        font-size: 20px;
+    .main-bottom-component-left button {
+        height: 42px;
+        width: 50%;
+        outline: none;
         color: white;
-        font-weight: 520;
-        border: none;
+        font-size: 18px;
+        font-weight: 500;
         border-radius: 5px;
-        margin-top: 20px;
-        margin-bottom: 30px;
         cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        background: #1B6652;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     }
 
-    .A input {
-        height: 60px;
+
+    /*Success popup*/
+    .center_worker_success {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
     }
+
+    .popup {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #6fd649;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+
 
     @media screen and (max-width: 1142px) {
         .main-bottom-right {
@@ -169,4 +265,22 @@
         }
     }
 
+    @media screen and (max-width: 950px) {
+        .main-bottom-component {
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+
+        .main-bottom-component-right {
+            display: none;
+
+        }
+
+        .main-bottom-component-left {
+            width: 100%;
+        }
+    }
 }
