--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -97,10 +97,17 @@
     input {
         height: 35px;
         width: 350px;
-        border: 2px solid black;
+        border: none;
         border-radius: 5px;
         font-size: 16px;
         padding-left: 6px;
+        border: 2px solid #2d3436;
+        /* Set border color to transparent */
+    }
+
+    input:focus {
+        border: 1px solid #4dccaa;
+
     }
 
     .forgot {
@@ -128,11 +135,6 @@
         .login-image {
             display: none;
         }
-    }
-
-    a {
-        text-decoration: none;
-        color: black;
     }
 
     @media screen and (max-width: 648px) {
