--- a/public/css/Component/Collector/Collector_Complains.css
+++ b/public/css/Component/Collector/Collector_Complains.css
@@ -61,10 +61,10 @@
 
     .main-bottom-component {
         width: 65%;
-        height: 75%;
+        height: 80%;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
-        padding: 25px;
+        padding: 30px;
         display: grid;
         grid-template-columns: 50% 50%;
     }
@@ -88,7 +88,7 @@
     }
 
     .main-bottom-component-left-topic {
-        margin-bottom: 45px;
+        margin-bottom: 20px;
     }
 
     .line {
@@ -106,7 +106,14 @@
     .main-bottom-component-left-component {
         display: flex;
         flex-direction: column;
-        margin-bottom: 17px;
+        margin-bottom: 10px;
+    }
+
+    .main-bottom-component-left-component h2 {
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 17px;
+        margin-bottom: 7px;
     }
 
     .main-bottom-component-left-component h4 {
@@ -117,7 +124,7 @@
     }
 
     .main-bottom-component-left-component input {
-        height: 35px;
+        height: 32px;
         width: 85%;
         outline: none;
         border-radius: 5px;
