--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -22,7 +22,6 @@
         align-items: center;
         font-family: Inter;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-
     }
 
     .main-top img {
@@ -63,10 +62,10 @@
 
     .main-bottom-component {
         width: 65%;
-        height: 75%;
+        height: 80%;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
-        padding: 25px;
+        padding: 40px;
         display: grid;
         grid-template-columns: 50% 50%;
     }
@@ -76,6 +75,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
     }
 
     .main-bottom-component-right img {
@@ -83,7 +83,6 @@
         height: 100%;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
-
     }
 
     .main-bottom-component-left {
@@ -92,7 +91,7 @@
     }
 
     .main-bottom-component-left-topic {
-        margin-bottom: 35px;
+        margin-bottom: 15px;
     }
 
     .line {
@@ -103,7 +102,7 @@
     }
 
     .main-bottom-component-left-topic h2 {
-        font-size: 28px;
+        font-size: 24px;
         font-weight: 500;
     }
 
@@ -115,19 +114,26 @@
     .main-bottom-component-left-component {
         display: flex;
         flex-direction: column;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
     }
 
-    .main-bottom-component-left-component h4 {
+    .main-bottom-component-left-component h2 {
         font-weight: 500;
         margin-bottom: 5px;
         font-size: 17px;
         margin-bottom: 7px;
     }
 
+    .main-bottom-component-left-component h4 {
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 20px;
+        margin-bottom: 7px;
+    }
+
     .main-bottom-component-left-component input {
-        height: 35px;
-        width: 85%;
+        height: 32px;
+        width: 80%;
         outline: none;
         border-radius: 5px;
         border: 1px solid #ccc;
@@ -157,13 +163,13 @@
     .main-bottom-component-left-button {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         margin-top: 5px;
     }
 
     .main-bottom-component-left button {
         height: 42px;
-        width: 50%;
+        width: 83%;
         outline: none;
         color: white;
         font-size: 18px;
