pushing the customer registration with profile pic

--- a/public/css/Component/Customer/Customer_Complain_History.css
+++ b/public/css/Component/Customer/Customer_Complain_History.css
@@ -16,6 +16,7 @@
 
     .main-right-top {
         height: 100%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-right-bottom {
