--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -39,9 +39,10 @@
     }
 
     .main-top-component img {
-        width: 40px;
-        height: 40px;
-        margin-left: 15px;
+        width: 55px;
+        height: 55px;
+        margin-left: 30px;
+        border-radius: 50%;
     }
 
     .main-top-component p {
