--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -41,6 +41,22 @@
         margin-right: 40px;
     }
 
+    .main-right-right-one {
+        display: flex;
+        flex-direction: column;
+
+        width: 100%;
+        height: 100%;
+    }
+
+    .main-right-right-one img {
+        max-width: 120px;
+        max-height: 120px;
+        height: auto;
+        width: auto;
+        border-radius: 50%;
+    }
+
     .change {
         font-weight: 510;
         color: #47924B;
@@ -388,6 +404,7 @@
     .profile-top img {
         width: 21px;
         height: 21px;
+
         margin-left: 16px;
         cursor: pointer;
     }
@@ -402,9 +419,10 @@
     }
 
     .profile-down-top-content img {
-        width: 60px;
-        height: 60px;
+        width: 100px;
+        height: 100px;
         margin-right: 30px;
+        border-radius: 50%;
     }
 
     .profile-down-content h1 {
