--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -16,9 +16,8 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        height: 50px;
-        margin-top: 20px;
-
+        height: 70px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-right-top-one img {
@@ -46,17 +45,17 @@
     }
 
     .main-right-top-one-content p {
-        margin-right: 15px;
+        font-size: 18px;
         font-family: inter;
-        font-size: 17px;
-        margin-left: 20px;
+        letter-spacing: 0.1px;
+        width: 100%;
     }
 
     .main-right-top-one-content img {
-        width: 40px;
-        height: 40px;
-        margin-left: 0;
-        margin-right: 0;
+        width: 55px;
+        height: 55px;
+        margin-left: 30px;
+        border-radius: 50%;
     }
 
     .main-right-top-two {
